# odoo-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GETTING_STARTED.md  INDUSTRY_AUDIT.md  LICENSE  ONBOARDING.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  VERIFY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml  mcp-client-bug.yml  odoo-compat-bug.yml  security-bug.yml
.github/workflows/: ci.yml  release.yml
odoo_addon/: README.md
odoo_addon/odoo_mcp_companion/: __manifest__.py
odoo_addon/odoo_mcp_long_lived_keys/: README.md  __manifest__.py
scripts/: extract_changelog.py  install.ps1  install.sh  regen_odoo_reference.py
src/odoo_mcp/: __init__.py  __main__.py  _credstore.py  _odoo_reference.py  _scan_heuristics.py  attestation.py  audit.py  audit_cli.py  cache_cli.py  client.py  client_config_cli.py  config.py  config_cli.py  credentials.py  dispatcher.py  doctor.py  errors.py  fields_cache.py  logging_setup.py  onboarding_cli.py  prompts.py  scan_cli.py  (+6 more)
templates/: hr.toml  manufacturing.toml  professional-services.toml  wholesale.toml
tests/: conftest.py  test_admin_refusal.py  test_allowlist.py  test_archive_or_delete.py  test_attestation.py  test_attestation_filename_pinning.py  test_audit.py  test_audit_cli.py  test_cli_json.py  test_client_cache.py  test_client_config_cli.py  test_client_context.py  test_client_fault_summary.py  test_client_lazy_credentials.py  test_client_marshal_none.py  test_client_message_post.py  test_client_proxy.py  test_client_transport.py  test_config.py  test_config_cli.py  test_create_attachment.py  test_credentials.py  test_credstore.py  test_default_get.py  test_diagnose_access.py  test_diagnose_routing.py  test_disabled_tools.py  test_doctor.py  test_domain_sandbox.py  test_field_redaction.py  test_fields_cache.py  test_help.py  test_help_cookbook.py  test_install_script.py  test_instance_not_found.py  test_latency_budget.py  test_limits.py  test_log_note.py  test_logging.py  test_lookup.py  (+19 more)
(+16 files in other folders)
